--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
-name: CI - lint & validate
+name: CI - lint, validate & deploy
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   validate:
@@ -22,7 +21,7 @@ jobs:
       - name: Run shellcheck on scripts
         run: |
           echo "Running shellcheck on scripts/*.sh"
-          shellcheck -x scripts/*.sh || (echo "shellcheck failed" && exit 1)
+          shellcheck -x scripts/*.sh
 
       - name: Validate CloudWatch JSON
         run: |
@@ -33,3 +32,38 @@ jobs:
         run: |
           echo "Validating fail2ban-dashboard.json"
           jq -e . fail2ban-dashboard.json >/dev/null
+
+  deploy:
+    name: Deploy artifacts (S3 upload)
+    runs-on: ubuntu-latest
+    needs: validate
+    environment: production
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      # Use either OIDC assume-role (recommended) or secrets. See notes below.
+      - name: Configure AWS credentials (secrets)
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # Optional: if you prefer OIDC (more secure) replace above step with:
+      # - name: Configure AWS credentials (OIDC)
+      #   uses: aws-actions/configure-aws-credentials@v2
+      #   with:
+      #     role-to-assume: arn:aws:iam::<ACCOUNT_ID>:role/<GitHub_OIDC_RoleName>
+      #     aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Show aws cli version
+        run: aws --version
+
+      - name: Run deploy script (uploads dashboard and agent JSON to S3)
+        env:
+          S3_BUCKET: ${{ secrets.DEPLOY_S3_BUCKET }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+          chmod +x .github/deploy/deploy.sh || true
+          .github/deploy/deploy.sh
