--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ on:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
-  S3_BUCKET_NAME: ${{ secrets.DEPLOY_S3_BUCKET }}
+  DEPLOY_S3_BUCKET: ${{ secrets.DEPLOY_S3_BUCKET }}
+  S3_BUCKET: ${{ secrets.DEPLOY_S3_BUCKET }}   # ensure deploy script sees S3_BUCKET
   LAMBDA_FUNCTION_NAME: fail2ban-auto-block
 
 jobs:
@@ -26,9 +27,12 @@ jobs:
 
       - name: Install dependencies and package lambda
         run: |
+          rm -rf package || true
+          mkdir -p package
           pip install boto3 -t ./package
-          cp fail2ban_lambda.py ./package/
+          cp fail2ban_lambda.py ./package/ || true
           cd package && zip -r ../lambda.zip .
+          ls -l lambda.zip
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -37,22 +41,43 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Upload package to S3
-        run: |
-          aws s3 cp lambda.zip s3://${{ secrets.DEPLOY_S3_BUCKET }}/lambda/fail2ban-lambda.zip --region ${{ secrets.AWS_REGION }}
+      - name: Debug - show caller identity (ensure credentials are loaded)
+        run: aws sts get-caller-identity
 
-      - name: Deploy Lambda function
+      - name: Make deploy script executable
+        run: chmod +x .github/deploy/deploy.sh
+
+      - name: Run deploy script (uploads artifacts -> S3)
+        env:
+          S3_BUCKET: ${{ env.S3_BUCKET }}
+          AWS_REGION: ${{ env.AWS_REGION }}
         run: |
-          aws lambda update-function-code \
-            --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
-            --s3-bucket ${{ secrets.DEPLOY_S3_BUCKET }} \
-            --s3-key lambda/fail2ban-lambda.zip \
-            --region ${{ secrets.AWS_REGION }} || \
-          aws lambda create-function \
-            --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
-            --runtime python3.9 \
-            --role "arn:aws:iam::113436413547:role/MyFail2BanRole" \
-            --handler fail2ban_lambda.lambda_handler \
-            --code S3Bucket=${{ secrets.DEPLOY_S3_BUCKET }},S3Key=lambda/fail2ban-lambda.zip \
-            --timeout 30 \
-            --memory-size 128
+          echo "Running deploy script with S3_BUCKET=${S3_BUCKET} AWS_REGION=${AWS_REGION}"
+          .github/deploy/deploy.sh
+
+      - name: Deploy Lambda function (update or create)
+        run: |
+          set -euo pipefail
+          if aws lambda get-function --function-name "${{ env.LAMBDA_FUNCTION_NAME }}" --region "${{ env.AWS_REGION }}" >/dev/null 2>&1; then
+            echo "Updating existing Lambda function code..."
+            aws lambda update-function-code \
+              --function-name "${{ env.LAMBDA_FUNCTION_NAME }}" \
+              --s3-bucket "${{ env.DEPLOY_S3_BUCKET }}" \
+              --s3-key "fail2ban-artifacts/${GITHUB_SHA:-manual-}/fail2ban-lambda.zip" \
+              --region "${{ env.AWS_REGION }}"
+          else
+            echo "Creating Lambda function (first time deploy)..."
+            if [ -z "${{ secrets.LAMBDA_ROLE_ARN }}" ]; then
+              echo "ERROR: LAMBDA_ROLE_ARN secret is empty or missing" >&2
+              exit 1
+            fi
+            aws lambda create-function \
+              --function-name "${{ env.LAMBDA_FUNCTION_NAME }}" \
+              --runtime python3.9 \
+              --role "${{ secrets.LAMBDA_ROLE_ARN }}" \
+              --handler fail2ban_lambda.lambda_handler \
+              --code S3Bucket="${{ env.DEPLOY_S3_BUCKET }}",S3Key="fail2ban-artifacts/${GITHUB_SHA:-manual-}/fail2ban-lambda.zip" \
+              --timeout 30 \
+              --memory-size 128 \
+              --region "${{ env.AWS_REGION }}"
+          fi
